# HW_M10_goit_py_web

hw_project/: hw_cheat_note.md  pyproject.toml
hw_project/quotes_toscrape/quotes_toscrape/: settings.py
hw_project/quotes_toscrape/quotesapp/templates/quotesapp/: base.html
hw_project/quotes_toscrape/users/: urls.py  views.py
hw_project/quotes_toscrape/users/templates/users/: signup.html
