[tool.poetry]
name = "HW_M-10"
version = "0.1.0"
description = "Create pirat copy of web-site http://quotes.toscrape.com by Django framework"
authors = ["Rishniak Valerii"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
psycopg2 = "^2.9.7"
pillow = "^10.0.1"
pymongo = "^4.5.0"
mongoengine = "^0.27.0"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
